--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libbesic (3.0.3) UNRELEASED; urgency=medium
+
+  * Fixed errors in python secret().
+
+ -- Penn Bauman <pcb8gb@virginia.edu>  Mon, 23 May 2022 23:09:50 -0500
+
 libbesic (3.0.2) UNRELEASED; urgency=medium
 
   * Actually fixed file reading buffer size :T
