--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libbesic (3.0.4) UNRELEASED; urgency=medium
+
+  * Fixed cython string encoding issues.
+
+ -- Penn Bauman <pcb8gb@virginia.edu>  Mon, 24 May 2022 00:02:44 -0500
+
 libbesic (3.0.3) UNRELEASED; urgency=medium
 
   * Fixed errors in python secret().
